--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,12 +1,16 @@
-<div class="container-fluid">
-  <div class="row bg-dark">
-    <div class="w-100 py-4 text-center">
-      <h1 class="text-light">WELCOME TO CHILLxPLACE</h1>
+<div class="container-fluid px-0">
+  <div class="min-vh-100 d-flex col flex-column px-0">
+    <div class="col px-0 body-container">
+      <h2 class="py-3 flex-grow-1 text-center">Tic Tac Toe</h2>
+      <hr />
+      <div class="text-center">
+        <h3 class="text-danger py-5">
+          Are you ready for the ultimate challenge?
+        </h3>
+        <a class="btn btn-outline-danger px-5" [routerLink]="['./play']"
+          >Play Now</a
+        >
+      </div>
     </div>
-  </div>
-  <div class="row text-primary">
-    <ul class="list-group">
-      <li class="list-group-item"><a [routerLink]="['./play']">TIC TAC TOE</a></li>
-    </ul>
   </div>
 </div>
